kubernetes/apps/default/planum/public/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: planum-public
  labels:
    app.kubernetes.io/name: planum
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - planum.iacob.co.uk
  rules:
    - matches:
        - path:
            type: Exact
            value: /health
        - path:
            type: PathPrefix
            value: /v1
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-For
                value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
            remove: [x-envoy-external-address, x-real-ip, forwarded, cf-connecting-ip]
      backendRefs:
        - name: planum-public
          port: 4050
